[package]
name = "bitcoin-bruteforce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bitcoin = "0.29.1"
secp256k1 = {version = "0.24.2", features = ["rand"]}
serde = {version = "1.0.130", features = ["derive"]}
serde-pickle = "1.0"
num_cpus = "1.13.0"
tokio = { version = "1.20.1", features = ["full"] }
bloom = "0.3.2"
# ocl = "0.19"